Rename slurm scheduler plugin in tests
Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -1,7 +1,7 @@
 {%- import 'common.jinja2' as common with context -%}
 ---
 scheduler-plugins:
-  slurm-plugin:
+  slurm_plugin:
     scheduler-definition: "../../scheduler_plugins/slurm/utils/upload_artifacts.sh"
     scheduler-commands: "tests.common.schedulers_common.SlurmCommands"
     requires-sudo: true
