Performance Tests Suite
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/requirements.txt
+++ b/tests/integration-tests/requirements.txt
@@ -1,13 +1,17 @@
+../../api/client/src
 argparse
 assertpy
 boto3
 cfn_flip
+click
 fabric
 filelock
 jinja2
 junitparser
+matplotlib
 pexpect
 pykwalify
+pyOpenSSL
 pytest
 pytest-datadir
 pytest-html
@@ -16,9 +20,7 @@ pytest-sugar
 pytest-xdist
 PyYAML
 requests
+requests
 retrying
 troposphere
 untangle
-requests
-pyOpenSSL
-../../api/client/src
