Add S3 bucket owner for artifacts and template
Add S3 bucket owner for artifacts and template when creating plugin definition for custom scheduler plugin

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/scheduler_plugins/plugin_template/plugin_definition.yaml
+++ b/scheduler_plugins/plugin_template/plugin_definition.yaml
@@ -41,6 +41,7 @@ ClusterInfrastructure:
     Template: s3://<BUCKET>/additional_cluster_infrastructure.cfn.yaml
     # Template: https://<BUCKET_NAME>.s3.${Region}.${URLSuffix}/<BUCKET_KEY_PREFIX>/additional_cluster_infrastructure.cfn.yaml
     Checksum: <TEMPLATE_CHECKSUM>
+    S3BucketOwner: '<BUCKET_OWNER>'
 PluginResources:
   # HTTPS or S3 URL of remote resources that ParallelCluster downloads and makes available to plugin event handlers.
   # In order to allow access to regionalized resources the ${Region} and the ${URLSuffix} variables are made available
@@ -49,6 +50,7 @@ PluginResources:
     - Source: s3://<BUCKET>/artifacts.tar.gz
       # Source: https://<BUCKET_NAME>.s3.${Region}.${URLSuffix}/<BUCKET_KEY_PREFIX>/artifacts.tar.gz
       Checksum: <ARTIFACTS_CHECKSUM>
+      S3BucketOwner: '<BUCKET_OWNER>'
 # The scheduler plugins will (possibly) require a number of “system” level users to run various processes.
 # This section can be used to create system users with a consistent user id on all cluster nodes.
 SystemUsers:
