Integ-tests: Test multiple EFS
An existing test was expanded to test multiple EFS.

This commit also changes pcluster3.yaml to cover more cases. pcluster3.yaml is a subset of common.yaml to quickly verify code

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/configs/pcluster3.yaml
+++ b/tests/integration-tests/configs/pcluster3.yaml
@@ -70,7 +70,7 @@ test-suites:
           oss: ["ubuntu2004"]
           schedulers: ["slurm"]
   storage:
-    test_efs.py::test_efs_compute_az:
+    test_efs.py::test_existing_efs:
       dimensions:
         - regions: ["us-west-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
