Integration Tests: cover consistent home directory and SSH key generation at SSH login and switch user.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/ad_stack.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/ad_stack.yaml
@@ -175,7 +175,7 @@ Resources:
                     echo 1>&2 "NUM_USERS_TO_CREATE must be passed as second arg"
                     exit 1
                 fi
-                for i in \$(seq 1 "\${NUM_USERS_TO_CREATE}"); do
+                for i in \$(seq 0 "\$((NUM_USERS_TO_CREATE - 1))"); do
                     NEW_USER_ALIASES="\${NEW_USER_ALIASES} PclusterUser\${i}"
                 done
 
