parameter defaults and changelog message

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -77,10 +77,12 @@ Parameters:
   ImageBuilderVpcId:
     Description: Optional. Provide a specific vpc id to use for building the container images. Use this if you don't have a default vpc available.
     Type: String
+    Default: ''
 
   ImageBuilderSubnetId:
     Description: Optional. Provide a specific subnet id to use for building the container images. Use this if you don't have a default vpc available.
     Type: String
+    Default: ''
 
 Mappings:
   ParallelCluster:
