Add new policies for build-image stack deletion
Add the new policies imagebuilder:GetImage and imagebuilder:CancelImageCreation required to delete the ImageBuilderImage resource created by the build-image stack.

Solves https://github.com/aws/aws-parallelcluster/issues/3867

Signed-off-by: Luca Carrogu <carrogu@amazon.com>
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -805,6 +805,8 @@ Resources:
             Effect: Allow
             Action:
               - imagebuilder:DeleteImage
+              - imagebuilder:GetImage
+              - imagebuilder:CancelImageCreation
               - imagebuilder:DeleteComponent
               - imagebuilder:DeleteImageRecipe
               - imagebuilder:DeleteInfrastructureConfiguration
