Add new policies for build-image stack deletion
Add the new policies imagebuilder:GetImage and imagebuilder:CancelImageCreation required to delete the ImageBuilderImage resource created by the build-image stack.

Solves https://github.com/aws/aws-parallelcluster/issues/3867

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -819,6 +819,8 @@ Resources:
             Effect: Allow
             Action:
               - imagebuilder:DeleteImage
+              - imagebuilder:GetImage
+              - imagebuilder:CancelImageCreation
               - imagebuilder:DeleteComponent
               - imagebuilder:DeleteImageRecipe
               - imagebuilder:DeleteInfrastructureConfiguration
@@ -994,7 +996,7 @@ Resources:
       InstanceProfileName: !Ref ImageBuilderInstanceProfile
       TerminateInstanceOnFailure: true
       SnsTopicArn: !Ref EcrImageBuilderSNSTopic
-      SubnetId: 
+      SubnetId:
         Fn::If:
           - NonDefaultVpc
           - !Ref ImageBuilderSubnetId
