--- a/tests/integration-tests/tests/storage/test_fsx_lustre/test_existing_fsx/pcluster.config.yaml
+++ b/tests/integration-tests/tests/storage/test_fsx_lustre/test_existing_fsx/pcluster.config.yaml
@@ -33,8 +33,49 @@ Scheduling:
         SubnetIds:
           - {{ private_subnet_id }}
 SharedStorage:
-  - MountDir: {{ mount_dir }}
-    Name: fsx
+  - MountDir: {{ mount_dirs[0] }}
+    Name: fsx1
     StorageType: FsxLustre
     FsxLustreSettings:
-      FileSystemId: {{ fsx_fs_id }}
+      StorageCapacity: 1200
+      ImportPath: s3://{{ bucket_name }}
+      ExportPath: s3://{{ bucket_name }}/export_dir
+      # SCRATCH_1 not available in China/GovCloud regions
+      {% if region.startswith(("cn-", "us-gov-")) %}
+      DeploymentType: PERSISTENT_1
+      PerUnitStorageThroughput: 200
+      {% endif %}
+  - MountDir: {{ mount_dirs[1] }}
+    Name: fsx2
+    StorageType: FsxLustre
+    FsxLustreSettings:
+      FileSystemId: {{ existing_fsx_fs_ids[0] }}
+  - MountDir: {{ mount_dirs[2] }}
+    Name: fsx3
+    StorageType: FsxLustre
+    FsxLustreSettings:
+      StorageCapacity: 1200
+      ImportPath: s3://{{ bucket_name }}
+      ExportPath: s3://{{ bucket_name }}/export_dir
+      # SCRATCH_1 not available in China/GovCloud regions
+      {% if region.startswith(("cn-", "us-gov-")) %}
+      DeploymentType: PERSISTENT_1
+      PerUnitStorageThroughput: 200
+      {% endif %}
+  - MountDir: {{ mount_dirs[3] }}
+    Name: fsx4
+    StorageType: FsxLustre
+    FsxLustreSettings:
+      FileSystemId: {{ existing_fsx_fs_ids[1] }}
+  - MountDir: {{ mount_dirs[4] }}
+    Name: fsx5
+    StorageType: FsxLustre
+    FsxLustreSettings:
+      StorageCapacity: 1200
+      ImportPath: s3://{{ bucket_name }}
+      ExportPath: s3://{{ bucket_name }}/export_dir
+      # SCRATCH_1 not available in China/GovCloud regions
+      {% if region.startswith(("cn-", "us-gov-")) %}
+      DeploymentType: PERSISTENT_1
+      PerUnitStorageThroughput: 200
+      {% endif %}
