--- a/tests/integration-tests/requirements.txt
+++ b/tests/integration-tests/requirements.txt
@@ -22,3 +22,5 @@ untangle
 requests
 pyOpenSSL
 ../../api/client/src
+# Temporarily pinning Paramiko due to a bug that causes test processes to hang on terminated socket
+paramiko==2.10.2
