--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -424,46 +424,46 @@ spot:
         schedulers: ["slurm"]
 storage:
   # Commercial regions that cant test FSx: ap-northeast-1, ap-southeast-1, ap-southeast-2, eu-central-1, eu-north-1, eu-west-1, eu-west-2, us-east-1, us-east-2, us-west-1, us-west-2
-  test_fsx_lustre.py::test_fsx_lustre:
-    dimensions:
-      - regions: ["eu-west-2"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
-        schedulers: ["slurm"]
-      - regions: ["eu-north-1"]
-        instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: {{ common.OSS_COMMERCIAL_ARM }}
-        schedulers: ["slurm"]
-      - regions: ["cn-north-1"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["slurm"]
-      - regions: ["us-gov-west-1"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["slurm"]
-  test_fsx_lustre.py::test_fsx_lustre_configuration_options:
-    dimensions:
-      - regions: ["us-east-2"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["slurm"]
-  test_fsx_lustre.py::test_fsx_lustre_backup:
-    dimensions:
-      - regions: ["eu-south-1"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_ONE_PER_DISTRO }}
-        schedulers: ["slurm"]
-      - regions: ["ap-southeast-1"]
-        instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: {{ common.OSS_COMMERCIAL_ARM }}
-        schedulers: ["slurm"]
-  test_fsx_lustre.py::test_existing_fsx:
-    dimensions:
-      - regions: ["us-west-2"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["centos7"]
-        schedulers: ["slurm"]
+#  test_fsx_lustre.py::test_fsx_lustre:
+#    dimensions:
+#      - regions: ["eu-west-2"]
+#        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+#        oss: {{ common.OSS_COMMERCIAL_X86 }}
+#        schedulers: ["slurm"]
+#      - regions: ["eu-north-1"]
+#        instances: {{ common.INSTANCES_DEFAULT_ARM }}
+#        oss: {{ common.OSS_COMMERCIAL_ARM }}
+#        schedulers: ["slurm"]
+#      - regions: ["cn-north-1"]
+#        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+#        oss: ["alinux2"]
+#        schedulers: ["slurm"]
+#      - regions: ["us-gov-west-1"]
+#        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+#        oss: ["alinux2"]
+#        schedulers: ["slurm"]
+#  test_fsx_lustre.py::test_fsx_lustre_configuration_options:
+#    dimensions:
+#      - regions: ["us-east-2"]
+#        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+#        oss: ["alinux2"]
+#        schedulers: ["slurm"]
+#  test_fsx_lustre.py::test_fsx_lustre_backup:
+#    dimensions:
+#      - regions: ["eu-south-1"]
+#        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+#        oss: {{ common.OSS_ONE_PER_DISTRO }}
+#        schedulers: ["slurm"]
+#      - regions: ["ap-southeast-1"]
+#        instances: {{ common.INSTANCES_DEFAULT_ARM }}
+#        oss: {{ common.OSS_COMMERCIAL_ARM }}
+#        schedulers: ["slurm"]
+#  test_fsx_lustre.py::test_existing_fsx:
+#    dimensions:
+#      - regions: ["us-west-2"]
+#        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+#        oss: ["centos7"]
+#        schedulers: ["slurm"]
   # EFS tests can be done in any region.
   test_efs.py::test_efs_compute_az:
     dimensions:
