--- a/tests/integration-tests/requirements.txt
+++ b/tests/integration-tests/requirements.txt
@@ -4,7 +4,9 @@ argparse
 assertpy
 boto3
 cfn_flip
-fabric
+click
+#https://github.com/fabric/fabric/issues/2204
+fabric==2.6.0
 filelock
 jinja2
 junitparser
