Fixes fabric to version 2.6.0
Releated to: https://github.com/fabric/fabric/issues/2204

--- a/tests/integration-tests/requirements.txt
+++ b/tests/integration-tests/requirements.txt
@@ -4,7 +4,8 @@ assertpy
 boto3
 cfn_flip
 click
-fabric
+#https://github.com/fabric/fabric/issues/2204
+fabric==2.6.0
 filelock
 jinja2
 junitparser
