Fixes fabric to version 2.6.0
Releated to: https://github.com/fabric/fabric/issues/2204

--- a/tests/integration-tests/requirements.txt
+++ b/tests/integration-tests/requirements.txt
@@ -2,7 +2,8 @@ argparse
 assertpy
 aws-parallelcluster
 boto3
-fabric
+#https://github.com/fabric/fabric/issues/2204
+fabric==2.6.0
 filelock
 jinja2
 junitparser
