Revert "Comment-out all FSxLustre storage tests"
This reverts commit 4f09b7b3a00572594f9ff80540d06321b68f85aa.

--- a/tests/integration-tests/configs/new_region.yaml
+++ b/tests/integration-tests/configs/new_region.yaml
@@ -130,12 +130,12 @@ test-suites:
           oss: ["centos7"]
           schedulers: ["slurm"]
   storage:
-#    test_fsx_lustre.py::test_fsx_lustre:
-#      dimensions:
-#        - regions: {{ NEW_REGION }}
-#          instances: {{ common.INSTANCES_DEFAULT_X86 }}
-#          oss: ["alinux2"]
-#          schedulers: ["slurm"]
+    test_fsx_lustre.py::test_fsx_lustre:
+      dimensions:
+        - regions: {{ NEW_REGION }}
+          instances: {{ common.INSTANCES_DEFAULT_X86 }}
+          oss: ["alinux2"]
+          schedulers: ["slurm"]
     test_efs.py::test_efs_compute_az:
       dimensions:
         - regions: {{ NEW_REGION }}
