Revert "Comment-out all the test case which use FSxLustre"
This reverts commit 536b89aab073a7b33aec43f11d0dc5de6b42a5f3.

--- a/tests/integration-tests/configs/pcluster3.yaml
+++ b/tests/integration-tests/configs/pcluster3.yaml
@@ -101,8 +101,8 @@ test-suites:
         - regions: ["eu-south-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
           oss: ["alinux2"]
-#    test_update.py::test_update_slurm:
-#      dimensions:
-#        - regions: ["eu-west-1"]
-#          instances: {{ common.INSTANCES_DEFAULT_X86 }}
-#          oss: ["centos7"]
+    test_update.py::test_update_slurm:
+      dimensions:
+        - regions: ["eu-west-1"]
+          instances: {{ common.INSTANCES_DEFAULT_X86 }}
+          oss: ["centos7"]
