Revert "Remove FSx as shared storage from clusters used by AD integration tests. Using EFS as a replacement."
This reverts commit 0e48150a2d55e0caa710a4d9ddbcea4897a1ed49.

--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
@@ -26,16 +26,15 @@ Monitoring:
       Enabled: true
       RetentionInDays: 14
 SharedStorage:
-#TODO Temporarily removed due to FSx issues
-#  - MountDir: /shared
-#    Name: fsx
-#    StorageType: FsxLustre
-#    FsxLustreSettings:
-#      StorageCapacity: 2400
+  - MountDir: /shared
+    Name: fsx
+    StorageType: FsxLustre
+    FsxLustreSettings:
+      StorageCapacity: 2400
   - MountDir: /ebs
     Name: ebs
     StorageType: Ebs
-  - MountDir: /shared
+  - MountDir: /efs
     Name: efs
     StorageType: Efs
 DirectoryService:
