Integ-tests: Improve multiple EFS and FSx test
The improvement aims at allowing running test with large number (up to 50) of file systems

1. Improve the fixtures to create existing EFS and FSx. This commit makes the fixtures to create a number of file systems at once. This is done to reduce the creation time because resrouce creation is in parallel in one CloudFormation stack. Furthermore, to avoid throttling, this commit limits the parallelism

2. If `--benchmark` option is specified with test_runner.py, 31 FSx and 31 EFS will be created as part of the test. If `--benchmark` option is not specified, 3 FSx and 3 EFS will be created.

3. Whan `--benchmark` is specified, mount targets of the EFS will also be created before cluster creation. Otherwise, there will be throttling if ParallelCluster try to create mount targets for more than 10 EFS. Mount targets should be usually created when users provide their own EFS.

4. Create FSx with Persistent_1 deployment type, because it is more widely available. e.g. China and govcloud do not have Scratch_1

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/tests/storage/test_efs/test_multiple_efs/pcluster.config.yaml
+++ b/tests/integration-tests/tests/storage/test_efs/test_multiple_efs/pcluster.config.yaml
@@ -22,6 +22,7 @@ Scheduling:
           {% else %}
           InstanceType: {{ instance }}
           MinCount: 1
+          MaxCount: 30
           {% endif %}
       Networking:
         SubnetIds:
@@ -29,22 +30,18 @@ Scheduling:
 # This compute subnet would be in a different AZ than head node for regions defined in AVAILABILITY_ZONE_OVERRIDES
 # See conftest for details
 SharedStorage:
-  - MountDir: {{ existing_efs_mount_dirs[0] }}
+  - MountDir: {{ new_efs_mount_dirs[0] }}
     Name: efs1
     StorageType: Efs
+    EfsSettings: # Customize EFS settings to have better coverage outside other EFS tests.
+      Encrypted: true
+      PerformanceMode: maxIO
+      ThroughputMode: provisioned
+      ProvisionedThroughput: 200
+  {% for efs_fs_id in existing_efs_ids %}
+  - MountDir: {{ existing_efs_mount_dirs[loop.index-1] }}
+    Name: existing_efs{{ loop.index-1 }}
+    StorageType: Efs
     EfsSettings:
-      FileSystemId: {{ existing_efss[0] }}
-  - MountDir: {{ new_efs_mount_dirs[0] }}
-    Name: efs2
-    StorageType: Efs
-  - MountDir: {{ existing_efs_mount_dirs[1] }}
-    Name: efs3
-    StorageType: Efs
-    EfsSettings:
-      FileSystemId: {{ existing_efss[1] }}
-  - MountDir: {{ new_efs_mount_dirs[1] }}
-    Name: efs4
-    StorageType: Efs
-  - MountDir: {{ new_efs_mount_dirs[2] }}
-    Name: efs5
-    StorageType: Efs
+      FileSystemId: {{ efs_fs_id }}
+  {% endfor %}
