Support FSx persistent_2
Beside the major change for supporting persistent_2, the following minor changes are made:

remove validation for per_unit_storage_throughput in cluster_schema, because the validation is also in the cluster_config

Use "file systems" instead of "filesystems" in error messages.

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
+++ b/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
@@ -221,7 +221,7 @@ SharedStorage:
     StorageType: FsxLustre
     FsxLustreSettings:
       StorageCapacity: 3600
-      DeploymentType: PERSISTENT_1  # PERSISTENT_1 | SCRATCH_1 | SCRATCH_2
+      DeploymentType: PERSISTENT_1  # PERSISTENT_1 | PERSISTENT_2 | SCRATCH_1 | SCRATCH_2
       ImportedFileChunkSize: 1024
       DataCompressionType: LZ4
       ExportPath: s3://bucket/folder
