--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update2.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update2.yaml
@@ -1,7 +1,7 @@
 Image:
   Os: {{ os }}
 HeadNode:
-  InstanceType: {{ head_node_instance_type }}
+  InstanceType: {{ instance }}
   Networking:
     SubnetId: {{ public_subnet_id }}
   Ssh:
@@ -16,7 +16,7 @@ Scheduling:
         - Name: cit
           InstanceType: {{ compute_instance_type }}
           MinCount: 2
-          MaxCount: 150
+          MaxCount: 3000
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
