--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
@@ -42,7 +42,9 @@ DirectoryService:
   DomainAddr: {{ ldap_uri }}
   PasswordSecretArn: {{ password_secret_arn }}
   DomainReadOnlyUser: {{ ldap_default_bind_dn }}
+  {% if directory_certificate_verification == True %}
   LdapTlsCaCert: {{ ldap_tls_ca_cert }}
+  {% endif %}
   LdapTlsReqCert: {{ ldap_tls_req_cert }}
   GenerateSshKeysForUsers: true
   LdapAccessFilter: "!(CN=PclusterUser2)"
@@ -51,3 +53,6 @@ DirectoryService:
     {% if directory_protocol == "ldap" %}
     ldap_auth_disable_tls_never_use_in_production: True
     {% endif %}
+DevSettings:
+  AmiSearchFilters:
+    Owner: "447714826191"
