Add queue_update_strategy TERMINATE and integration test
Add TERMINATE value to QueueUpdateStrategy
With TERMINATE strategy, nodes will be put in POWER_DOWN_FORCR and replaced immediately, current running job in the replaced queue will be disrupted. Jobs in other queues will work as expected.

Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -50,6 +50,7 @@ Scheduling:
   Scheduler: slurm
   SlurmSettings:
     ScaledownIdletime: 10
+    QueueUpdateStrategy: TERMINATE
     Dns:
       DisableManagedDns: true
       UseEc2Hostnames: true
