--- a/tests/integration-tests/tests/update/test_update/test_queue_parameters_update/pcluster.update_drain_without_running_job.yaml
+++ b/tests/integration-tests/tests/update/test_update/test_queue_parameters_update/pcluster.update_drain_without_running_job.yaml
@@ -9,7 +9,7 @@ HeadNode:
     KeyName: {{ key_name }}
 Scheduling:
   SlurmSettings:
-    QueueUpdateStrategy: DRAIN
+    QueueUpdateStrategy: {{ queue_update_strategy }}
   Scheduler: slurm
   SlurmQueues:
     - Name: queue1
