Grant write permission to No Response GitHub Action
Grant write permission to issues to the No Response GitHub Action (https://github.com/lee-dohm/no-response)

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/.github/workflows/no-response.yml
+++ b/.github/workflows/no-response.yml
@@ -10,6 +10,12 @@ on:
     # Schedule for five minutes after the hour, every hour
     - cron: '5 * * * *'
 
+# Grant permission to write on "issues"
+# By specifying the access of one of the scopes, all of those that are not
+# specified are set to 'none'.
+permissions:
+  issues: write
+
 jobs:
   noResponse:
     runs-on: ubuntu-latest
