Fix scheduler plugin integ. test with SchedulableMemory parameter
Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_arm64.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_arm64.yaml
@@ -9,6 +9,7 @@
       MaxCount: 10
       MinCount: 0
       Name: c1
+      SchedulableMemory: null
       SpotPrice: null
   ComputeSettings:
     LocalStorage:
