Add integration tests to check budget creation and update
Creating a cluster without a budget and adding the bugdget with an update. Creating a cluster with budgets and changing their properties, validating changes. Uses the boto3 api to describe and verify budget update, creation, and deletion.
Also changed the naming of the budgets, to include a short random alphanumeric string at the end, avoiding name duplication, since the names are the primary identifiers for the budget api.

--- a/tests/iam_policies/user-role.cfn.yaml
+++ b/tests/iam_policies/user-role.cfn.yaml
@@ -420,6 +420,13 @@ Resources:
                   aws:RequestedRegion:
                     - !Ref Region
             Sid: CloudWatchLogs
+            # Required to create and modify budgets
+          - Action:
+              - budgets:ModifyBudget
+              - budgets:ViewBudget
+            Resource: '*'
+            Effect: Allow
+            Sid: BudgetsDescribeModify
 
   ### IMAGE ACTIONS POLICIES
 
