--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -678,6 +678,12 @@ Resources:
                   aws:RequestedRegion:
                     - !Ref Region
             Sid: CloudWatchLogs
+          - Action:
+              - budgets:ModifyBudget
+              - budgets:ViewBudget
+            Resource: '*'
+            Effect: Allow
+            Sid: BudgetsDescribeModify
 
   ### IMAGE ACTIONS POLICIES
 
