Add validation to address field and cost tags
Validates the regex of the email/sns address field of the Budget configuration. Also validates the cost allocation tags being used. Unit tests added to cover both functionalities, and the required IAM actions were included in the parallelcluster-api.yaml file.

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -684,6 +684,11 @@ Resources:
             Resource: '*'
             Effect: Allow
             Sid: BudgetsDescribeModify
+          - Action:
+              - ce:ListCostAllocationTags
+            Resource: '*'
+            Effect: Allow
+            Sid: CostAllocationTagsUpdateDescribe
 
   ### IMAGE ACTIONS POLICIES
 
