Add custom metric filters for common scaling errors to default cloudwatch dashboard (#4195)
* Added the first version of custom metric filters for default cloudwatch dashboard

added integration tests for new configuration option enable_error_metrics (default true)

* added configuration option enable_error_metrics (default true)

* added integration tests for new configuration option enable_error_metrics (default true)

added integration tests for new configuration option enable_error_metrics (default true)

added integration tests for new configuration option enable_error_metrics (default true)

Co-authored-by: Hanting Wong <hanwong@amazon.com>

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -207,6 +207,7 @@ Monitoring:
   Dashboards:
     CloudWatch:
       Enabled: false  # true
+      EnableErrorMetrics: true
 AdditionalPackages:
   IntelSoftware:
     IntelHpcPlatform: false
