--- a/tests/integration-tests/tests/dashboard_and_alarms/test_dashboard_and_alarms/test_dashboard_and_alarms/pcluster.config.yaml
+++ b/tests/integration-tests/tests/dashboard_and_alarms/test_dashboard_and_alarms/test_dashboard_and_alarms/pcluster.config.yaml
@@ -34,3 +34,4 @@ Monitoring:
   Dashboards:
     CloudWatch:
       Enabled: {{ dashboard_enabled }}
+      EnableErrorMetrics: {{ enabled_error_metrics }}
