Add policies for CreateFleet API call
Add bare minimum additional permission to allow HeadNode to make CreateFleet requests

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -538,6 +538,7 @@ Resources:
               - ec2:AttachNetworkInterface
               - ec2:AuthorizeSecurityGroupEgress
               - ec2:AuthorizeSecurityGroupIngress
+              - ec2:CreateFleet
               - ec2:CreateLaunchTemplate
               - ec2:CreateLaunchTemplateVersion
               - ec2:CreateNetworkInterface
