Support On-Demand Capacity Reservations in Cluster Configuration File
1. The section can appear both on queue level and compute resource level. The section on compute resource level takes precedence over the queue level.

2. The capacity reservation specification is passed into the launch templates used by compute nodes. This approach is forward compatible if ParallelCluster uses EC2 fleet

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
+++ b/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
@@ -132,6 +132,8 @@ Scheduling:
       Networking:
         SubnetIds:
           - subnet-12345678
+      CapacityReservationTarget:
+        CapacityReservationResourceGroupArn: arn:aws:resource-groups:us-east-1:123456791537:group/MyCRGroupOther
       CustomSettings:  # here you can add any custom setting
         Key1: String
       ComputeResources:
@@ -139,8 +141,12 @@ Scheduling:
           InstanceType: c5.xlarge
           CustomSettings:  # here you can add any custom setting
             RealMemory: 185000
+          CapacityReservationTarget:
+            CapacityReservationResourceGroupArn: arn:aws:resource-groups:us-east-1:123456791537:group/MyCRGroup
         - Name: computeresource2
           InstanceType: c4.xlarge
+          CapacityReservationTarget:
+            CapacityReservationId: cr-54321fcdbd5971234
       CustomActions:
         OnNodeStart:
           Script: https://test.tgz  # s3:// | https://
