Add validation to make sure the ODCR has the right instance type and availability zone
Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_2.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_2.yaml
@@ -20,6 +20,10 @@ Scheduling:
       ComputeResources:
         - Name: compute_resource1
           InstanceType: c5.xlarge
+        - Name: compute_resource2
+          InstanceType: t2.micro
+          CapacityReservationTarget:
+            CapacityReservationId: cr-54321fcdbd5971234
 SharedStorage:
   - MountDir: /my/mount/point2
     Name: name1
